frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nuxt-site
  template:
    metadata:
      labels:
        app: nuxt-site
    spec:
      containers:
        - name: nuxt-site
          image: jorik2020/nuxt-site:0.1
          ports:
            - containerPort: 3000
