backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: api-store
  ports:
    - protocol: TCP
      port: 8811
      targetPort: 8080
