frontend-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-nodeport
spec:
  type: NodePort
  selector:
    app: nuxt-site
  ports:
    - protocol: TCP
      port: 8800
      targetPort: 3000
  externalIps:
    - 172.16.3.200
