frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: nuxt-site
  ports:
    - protocol: TCP
      port: 8811
      targetPort: 3000
