server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubunto-ingress
spec:
  rules:
  - host: "ubunto.interal"
    http:
      paths:
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8811
      # - path: /api-1
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: api-1-service
      #       port:
      #         number: 80
      # - path: /api-2
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: api-2-service
      #       port:
      #         number: 80
